# aquacrop-gym

./: .gitignore  MANIFEST.in  Paper_2_adaptable_smts.ipynb  README.md  cali_corn_ppo_day3_smt4.csv  cali_corn_ppo_day3_smt4_default.csv  cali_sorg_ppo_day3_smt4_default.csv  cali_soy_ppo_day3_smt4_default.csv  cali_tomato_ppo_day3_smt4_default.csv  cali_wheat_ppo_day3_smt4_default.csv  california_ppo_day1_smt4.csv  california_ppo_day1_smt4_rand.csv  california_ppo_day3_smt4.csv  champion_es_day1_smt4_rand.csv  champion_ppo_day1_smt4_rand.csv  champion_ppo_day3_smt4.csv  cloning.ipynb  cordoba_ppo_day3_smt4.csv  neb_corn_es_day1_smt4_default.csv  neb_corn_impala_day1_smt4_default.csv  neb_corn_ppo_day1_smt4_default.csv  neb_corn_ppo_day3_smt4.csv  neb_corn_ppo_day3_smt4_default.csv  neb_corn_ppo_day3_smt4_forecast.csv  neb_corn_ppo_day3_smt4_norain.csv  neb_corn_ppo_day7_smt4_default.csv  neb_corn_sac_day1_smt4_default.csv  neb_sorg_ppo_day3_smt4_default.csv  neb_soy_ppo_day3_smt4_default.csv  neb_tomato_ppo_day3_smt4_default.csv  neb_wheat_ppo_day3_smt4_default.csv  new_eto-Copy1.ipynb  optimize_smt_benchmarks.ipynb  ppo70_day7_smt4_dayshift_noforecast_neweto_endreward.csv  ppo_example.ipynb  requirements.txt  setup.cfg  stable_baselines.ipynb
aquacropgym/: envs.py  utils.py
learn_outputs/: neb_corn_es_day1_depthdiscreet_default_wg1000.csv  neb_corn_es_day1_smt4_default_wg1000.csv  neb_corn_ppo_day10_smt4_default_wg1000.csv  neb_corn_ppo_day1_depthdiscreet_default_wg1000.csv  neb_corn_ppo_day3_depthdiscreet_default_wg1000.csv  neb_corn_ppo_day5_smt4_default_wg1000.csv  (+5 more)
(+7 files in other folders)
