[metadata]
name = aquacropgym
version = 1.0.0
author = Thomas Kelly
author_email = thomas.kelly-2@manchester.ac.uk
description = openai-gym crop simulation environment
long_description = file: README.md
long_description_content_type= text/markdown
keywords = aquacrop-gym aquacrop, aquacropos, aquacrop-ospy, python
url = https://github.com/aquacropos/aquacrop-gym
project_urls =
    Bug Tracker = https://github.com/aquacropos/aquacrop-gym/issues
classifiers =
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    License :: OSI Approved :: MIT License
    Operating System :: MacOS
    Operating System :: Microsoft
    Operating System :: POSIX :: Linux
    Natural Language :: English

[options]
install_requires = 
    aquacrop==1.1.2
    aquacropeto==0.1.1
    gym==0.19.0
    numpy==1.21.2
    pandas==1.4.0
    lz4
    torch==1.11.0
    dm_tree
    ray[rllib]
    tensorflow==2.8.0
    protobuf==3.20.0

setup_requires =
    aquacrop==1.1.2
    aquacropeto==0.1.1
    gym==0.19.0
    numpy==1.21.2
    pandas==1.4.0
    lz4
    torch==1.11.0
    dm_tree
    ray[rllib]
    tensorflow==2.8.0
    protobuf==3.20.0

include_package_data = True
packages = find:
python_requires = >=3.6
